--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
-KAFKA_DAG_RUN_TOPIC_NAME=AIRFLOW_DAG_RUN_LOGS
-KAFKA_TASK_INSTANCE_TOPIC_NAME=AIRFLOW_TASK_INSTANCE_LOGS
+KAFKA_AIRFLOW_V2_DAG_RUN_TOPIC_NAME=AIRFLOW_V2_DAG_RUN_LOGS
+KAFKA_AIRFLOW_V2_TASK_INSTANCE_TOPIC_NAME=AIRFLOW_V2_TASK_INSTANCE_LOGS
+KAFKA_AIRFLOW_V3_DAG_RUN_TOPIC_NAME=AIRFLOW_V3_DAG_RUN_LOGS
+KAFKA_AIRFLOW_V3_TASK_INSTANCE_TOPIC_NAME=AIRFLOW_V3_TASK_INSTANCE_LOGS
 KAFKA_MSK_ARN=aws:kafka:us-east-1:123456789012:cluster/my-cluster/1234567890
-SCHEMA_REGISTRY_URL=https://<schema-registry-endpoint>
+SCHEMA_REGISTRY_URL=http://localhost:8081
 LOGGING_LEVEL=INFO
 ENVIRONMENT=DEV
